fix:header fixed and dark mode upgraded

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,3 @@
 .header {
   transition: height 0.3s ease;
 }
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
